--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
     <!-- Hero Section -->
     <section class="py-24 sm:py-32 relative overflow-hidden">
-        <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('keys/hero-bg?prompt=modern%20e-commerce%20shopping%20background%20with%20packages%20and%20technology')">
+        <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('https://raw.githubusercontent.com/kongali1720/kongali1720.github.io/main/shopping.jpeg')">
             <div class="absolute inset-0 bg-black opacity-60"></div>
         </div>
         <div class="max-w-screen-xl mx-auto px-4 sm:px-6 lg:px-8 relative z-10">
